add the recruitment section on desktop view

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,3 +21,10 @@
 <section>
   <app-chiffres-cles></app-chiffres-cles>
 </section>
+
+<!-- technologies used + recruitment + news -->
+<section class="navbar-background overflow-hidden">
+  <app-technology-used></app-technology-used>
+  <app-recruitment></app-recruitment>
+  <app-news></app-news>
+</section>
