--- a/src/styles.css
+++ b/src/styles.css
@@ -34,6 +34,14 @@
         clip-path: ellipse(90% 100% at 5% 50%);
     }
 
+  .custom-curve-reverse {
+    clip-path: ellipse(90% 100% at 95% 50%);
+  }
+
+  .custom-curve-reverse-upside-down {
+    clip-path: ellipse(100% 90% at 50% 95%);
+  }
+
     .custom-curve1 {
         clip-path: ellipse(90% 100% at 5% 50%);
     }
