--- a/src/app/cards/project-card/project-card.html
+++ b/src/app/cards/project-card/project-card.html
@@ -1,4 +1,5 @@
-<div class="relative w-[70vw] h-64 top-4 md:w-7/12 md:h-72 !mx-6 md:mx-0 md:mb-12 rounded-full"
+<div class="relative w-[70vw] h-64 top-4 md:w-7/12 md:h-72 !mx-6
+            md:mx-0 md:mb-12 rounded-full"
     >
     <!-- Bottom base Layer: the blue -->
     <div class="absolute inset-0 rounded-3xl z-0 flex text-white
@@ -6,9 +7,9 @@
             [ngClass]="bgColor">
     </div>
     <div class="absolute inset-x-0 bottom-0 h-1/2 w-full bg-no-repeat bg-[100%_50%] opacity-60 blur-[0.4px]"
-        style="background-image: url('background-images/generic-background/background1.svg'); 
+        style="background-image: url('/background-images/generic-background/background1.svg');
 
-            -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
+            -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
             mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);">
     </div>
 
