--- a/src/app/scroll-pagination/scroll-pagination.html
+++ b/src/app/scroll-pagination/scroll-pagination.html
@@ -1,6 +1,6 @@
 <div class="flex justify-center gap-2">
     <div *ngFor="let page of [].constructor(pages); let i = index"
         class="w-2 h-2 rounded-full transition-all duration-300"
-        [ngClass]="i === currentPage? 'bg-wind-blue scale-110' : 'bg-gray-400 opacity-50'"
+        [ngClass]="i === currentPage? [color, 'scale-110'] : ['bg-gray-400', 'opacity-50']"
     ></div>
 </div>
