--- a/src/app/recruitment/recruitment.html
+++ b/src/app/recruitment/recruitment.html
@@ -1,3 +1,7 @@
-<app-card-circular-cut>
+<app-card-circular-cut [imageUrl]="imageUrl"
+                        [buttonLabel]="buttonLabel"
+                        [title]="title"
+                        [description]="description"
+                        [tag]="tag">
 
 </app-card-circular-cut>
