add footer in all screens

--- a/src/app/buttons/button-with-background/button-with-background.html
+++ b/src/app/buttons/button-with-background/button-with-background.html
@@ -1,5 +1,5 @@
-<button class="relative bg-no-repeat bg-cover rounded-full"
-  [ngClass]="[height, width, bgColor, textColor]">
+<button class="relative bg-no-repeat bg-cover"
+  [ngClass]="[height, width, bgColor, textColor, rounded]">
   <div class="absolute inset-0 bg-no-repeat bg-cover rounded-full"
       [ngClass]="imageOpacity"
       [ngStyle]="{
