--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,6 +25,14 @@
 <!-- technologies used + recruitment + news -->
 <section class="navbar-background overflow-hidden">
   <app-technology-used></app-technology-used>
+
   <app-recruitment></app-recruitment>
   <app-news></app-news>
 </section>
+
+<section class="bg-newsletter-back h-full">
+  <app-newsletter></app-newsletter>
+  <app-footer></app-footer>
+</section>
+
+
