--- a/src/app/cards/client-card/client-card.html
+++ b/src/app/cards/client-card/client-card.html
@@ -1,12 +1,13 @@
 <div class="flex justify-center items-center relative w-44 h-32 rounded-xl">
-    <div class="absolute inset-0 bg-[url('/background-images/clients/background-client.jpg')] 
+    <div class="absolute inset-0
             bg-cover
-            rounded-xl">
+            rounded-xl"
+         [ngStyle]="{'background-image': 'url(' + cardBackgroundImage + ')'}">
     </div>
-    <div class="relative z-10">
-        <img [src]="clientLogoData.path" [alt]="clientName" 
-            [ngClass]="[clientLogoData.height, clientLogoData.width]">
+    <div *ngIf="isClient" class="relative z-10">
+        <img [src]="clientLogoData?.path" [alt]="clientName"
+            [ngClass]="[clientLogoData?.height, clientLogoData?.width]">
     </div>
-    
+
 </div>
 
