--- a/src/app/chiffres-cles/chiffres-cles.html
+++ b/src/app/chiffres-cles/chiffres-cles.html
@@ -1,5 +1,5 @@
 <div class="relative chiffresClesBack overflow-hidden h-full py-8"
-      [ngClass]="{'h-[130vh]': showScrollButtons,
+      [ngClass]="{'h-[125vh]': showScrollButtons,
                   'h-[110vh]': !showScrollButtons}">
   <div class="absolute w-1/2 md:w-2/5 h-[100%] z-10 right-0 top-1/2 -translate-y-1/2
               flex justify-end">
@@ -40,7 +40,7 @@
 
     <!-- now the scroll buttons -->
     <div *ngIf="showScrollButtons" appScrollButtons [scrollTarget]="chiffresScrollContainer" #scrollBtns = "ScrollButtons"
-          class="flex justify-center items-center gap-4 mt-4 z-20">
+          class="flex justify-center items-center gap-4 z-20 mt-2">
       <app-circular-button class="md:pr-8" (click)="scrollBtns.scroll('left')" [icon]="'left-scroll'"
                            [bgColor]="'bg-wind-blue'" [strokeColor]="'stroke-white'" [strokeWidth]=2
                            bgImage="background-images/generic-background/background1.svg">
