--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,1 +1,31 @@
-<p>footer works!</p>
+<footer class="absolute w-full h-[1010px] sm:h-[955px] md:h-[550px] top-wave overflow-hidden text-white specialFont">
+
+  <!-- Background image layer -->
+  <div class="footer-image-back absolute inset-0 z-0"></div>
+
+  <!-- Background color / gradient layer -->
+  <div class="footer-color-back absolute inset-0 z-[-1]"></div>
+
+  <!-- Footer content -->
+  <div class="relative w-full z-10 h-full flex">
+
+    <!-- here is the top part: links and logo and stuff -->
+    <div class="absolute top-48 md:top-32 w-[90%] flex left-1/2 -translate-x-1/2">
+      <app-footer-links></app-footer-links>
+    </div>
+
+    <!-- here is the bottom credits/rights: only visible in md and larger screens  -->
+    <div class="hidden absolute md:flex flex-col w-full !bottom-8">
+      <hr class="border-3 opacity-100 w-[90%] border-white mx-auto">
+      <div class="!w-[90%] mx-auto flex justify-between mt-8 text-sm">
+        <p>
+          Tous droits réservés – Designed by Wind Consulting
+        </p>
+        <p>
+          © 2021 Wind Consulting Tunisia
+        </p>
+      </div>
+    </div>
+
+  </div>
+</footer>
