--- a/src/app/hero/hero-card/hero-card.html
+++ b/src/app/hero/hero-card/hero-card.html
@@ -3,7 +3,7 @@ py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg
   text-left md:h-96">
   <!-- Background Image Layer -->
   <div class="absolute inset-x-0 bottom-0 h-1/2 bg-bottom opacity-90 blur-[0.5px]"
-    style="background-image: url('background-images/generic-background/background1.svg');
+    style="background-image: url('/background-images/generic-background/background1.svg');
 
           -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);
           mask-image: linear-gradient(to top, rgba(0, 0, 0, 1), transparent);">
@@ -14,14 +14,14 @@ py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg
     <h1 class="text-3xl font-bold md:ml-5 mb-4 text-white">
       Progrès innovant
     </h1>
-    <p class="mb-12 md:mb-20 md:ml-5 whitespace-normal text-white">
+    <p class="mb-8 sm:mb-12 md:mb-20 md:ml-5 whitespace-normal text-white">
       Wind Consulting vous accompagne pour innover et progresser durablement grâce à des solutions digitales sur mesure
       alliant performance et agilité.
     </p>
     <div class="md:ml-5 flex justify-center md:justify-start md:text-left">
       <app-button-with-background
         backgroundImageUrl="background-images/generic-background/background1-with-more-fill.svg" label="Nous Rejoindre"
-        icon="arrow-up-right" width="w-72 md:w-48" height="h-10" [strokeWidth]="2" strokeColor="stroke-links-blue"
+        icon="arrow-up-right" width="w-56 sm:w-72 md:w-48" height="h-10" [strokeWidth]="2" strokeColor="stroke-links-blue"
         textColor="text-links-blue" [logo]="true" whichLogo="logoBlue" backgroundPosition="bottom" logoSize="size-10"
         bgColor="bg-white" imageOpacity="opacity-100">
       </app-button-with-background>
