--- a/src/app/icon/icon.html
+++ b/src/app/icon/icon.html
@@ -45,18 +45,48 @@
     </svg>
 
     <svg *ngSwitchCase="'left-scroll'" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-         [attr.stroke-width]="strokeWidth" 
-        [ngClass]="strokeColor" 
+         [attr.stroke-width]="strokeWidth"
+        [ngClass]="strokeColor"
         class="size-4">
         <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
     </svg>
 
-    <svg *ngSwitchCase="'right-scroll'" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" 
-        [attr.stroke-width]="strokeWidth" 
-        [ngClass]="strokeColor" 
+    <svg *ngSwitchCase="'right-scroll'" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        [attr.stroke-width]="strokeWidth"
+        [ngClass]="strokeColor"
         class="size-4">
         <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
     </svg>
+
+
+  <svg *ngSwitchCase="'facebook'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+       class="size-10"
+       [attr.stroke-width]="strokeWidth"
+       [ngClass]="strokeColor">
+
+    <path d="M168,88H152a24,24,0,0,0-24,24V224" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+    <line x1="96" y1="144" x2="160" y2="144" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+
+  <svg *ngSwitchCase="'instagram'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+       class="size-10"
+       [attr.stroke-width]="strokeWidth"
+       [ngClass]="strokeColor">
+    <circle cx="128" cy="128" r="30" fill="none" stroke-miterlimit="10"/>
+    <rect x="55" y="55" width="150" height="150" rx="48" fill="none" stroke-linecap="round" stroke-linejoin="round"/>
+    <circle cx="170" cy="85" r="8" fill="none"/>
+  </svg>
+
+  <svg *ngSwitchCase="'linkedin'" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"
+       class="size-10"
+       [attr.stroke-width]="strokeWidth"
+       [ngClass]="strokeColor">
+
+    <line x1="120" y1="112" x2="120" y2="176" fill="none" stroke-linecap="round" stroke-linejoin="round" />
+    <line x1="88" y1="112" x2="88" y2="176" fill="none" stroke-linecap="round" stroke-linejoin="round" />
+    <path d="M120,140a28,28,0,0,1,56,0v36" fill="none" stroke-linecap="round" stroke-linejoin="round" />
+    <circle cx="88" cy="82" r="6" fill="none"/>
+  </svg>
 
 
 
