--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,8 @@
     font-weight: 400;
   }
 
+
+
   .navbar-background {
     background-image: url("../public/background-images/navbar-background.jpg");
     background-size: 100%;
@@ -37,6 +39,7 @@
   .custom-curve-reverse {
     clip-path: ellipse(90% 100% at 95% 50%);
   }
+
 
   .custom-curve-reverse-upside-down {
     clip-path: ellipse(100% 90% at 50% 95%);
@@ -59,6 +62,41 @@
           -ms-overflow-style: none;  /* IE and Edge */
           scrollbar-width: none;  /* Firefox */
     }
+  .bottom-wave {
+    clip-path: polygon(100% 0%, 0% 0% , 0.00% 94.13%, 2.00% 94.05%, 4.00% 93.83%, 6.00% 93.46%, 8.00% 92.96%, 10.00% 92.33%, 12.00% 91.59%, 14.00% 90.76%, 16.00% 89.86%, 18.00% 88.90%, 20.00% 87.92%, 22.00% 86.92%, 24.00% 85.93%, 26.00% 84.98%, 28.00% 84.09%, 30.00% 83.28%, 32.00% 82.56%, 34.00% 81.95%, 36.00% 81.47%, 38.00% 81.13%, 40.00% 80.93%, 42.00% 80.88%, 44.00% 80.98%, 46.00% 81.23%, 48.00% 81.62%, 50.00% 82.14%, 52.00% 82.79%, 54.00% 83.54%, 56.00% 84.38%, 58.00% 85.30%, 60.00% 86.26%, 62.00% 87.25%, 64.00% 88.25%, 66.00% 89.23%, 68.00% 90.17%, 70.00% 91.05%, 72.00% 91.85%, 74.00% 92.55%, 76.00% 93.14%, 78.00% 93.60%, 80.00% 93.92%, 82.00% 94.09%, 84.00% 94.12%, 86.00% 93.99%, 88.00% 93.72%, 90.00% 93.31%, 92.00% 92.76%, 94.00% 92.10%, 96.00% 91.33%, 98.00% 90.47%, 100.00% 89.55%);
+  }
+  .top-wave {
+    clip-path: polygon(
+      100% 100%, 0% 100%,
+      0.00% 5.87%, 2.00% 5.95%, 4.00% 6.17%, 6.00% 6.54%,
+      8.00% 7.04%, 10.00% 7.67%, 12.00% 8.41%, 14.00% 9.24%,
+      16.00% 10.14%, 18.00% 11.10%, 20.00% 12.08%, 22.00% 13.08%,
+      24.00% 14.07%, 26.00% 15.02%, 28.00% 15.91%, 30.00% 16.72%,
+      32.00% 17.44%, 34.00% 18.05%, 36.00% 18.53%, 38.00% 18.87%,
+      40.00% 19.07%, 42.00% 19.12%, 44.00% 19.02%, 46.00% 18.77%,
+      48.00% 18.38%, 50.00% 17.86%, 52.00% 17.21%, 54.00% 16.46%,
+      56.00% 15.62%, 58.00% 14.70%, 60.00% 13.74%, 62.00% 12.75%,
+      64.00% 11.75%, 66.00% 10.77%, 68.00% 9.83%, 70.00% 8.95%,
+      72.00% 8.15%, 74.00% 7.45%, 76.00% 6.86%, 78.00% 6.40%,
+      80.00% 6.08%, 82.00% 5.91%, 84.00% 5.88%, 86.00% 6.01%,
+      88.00% 6.28%, 90.00% 6.69%, 92.00% 7.24%, 94.00% 7.90%,
+      96.00% 8.67%, 98.00% 9.53%, 100.00% 10.45%
+    );
+
+  }
+
+  .links-container {
+    @apply flex flex-col;
+  }
+
+  @screen md {
+    .links-container {
+      @apply grid gap-8;
+      grid-template-columns: 2fr 1fr 1fr 1.5fr;
+
+    }
+  }
+
 
 }
 
