fixed the news section scroll problem

--- a/src/app/buttons/button-with-label/button-with-label.html
+++ b/src/app/buttons/button-with-label/button-with-label.html
@@ -1,7 +1,7 @@
 <div class="border-3 w-80 md:w-96 bg-white border-solid border-wind-blue rounded-full flex justify-end">
   <!-- this is the label -->
   <div class="flex flex-1 items-center justify-center md:justify-start">
-    <input type="text" class="specialFont bg-transparent focus:outline-none pl-4"
+    <input type="text" class="absolute specialFont bg-transparent focus:outline-none flex-shrink-0 pl-6"
            [placeholder]="label"
     />
 
