--- a/src/app/newsletter/newsletter.html
+++ b/src/app/newsletter/newsletter.html
@@ -1,4 +1,4 @@
-<div class="py-12 flex flex-col justify-center gap-11">
+<div class="pt-12 pb-0 md:py-12 flex flex-col justify-center gap-11">
   <app-generic-title size="large">
     <span class="betweenLinesSpacing">
       Abonner-vous à notre newsletter
