--- a/src/app/cards/card-with-horizontal-lines/card-with-horizontal-lines.html
+++ b/src/app/cards/card-with-horizontal-lines/card-with-horizontal-lines.html
@@ -1,4 +1,4 @@
-<div #newsCard class="flex flex-col h-96 w-[90vw] lg:w-[600px]">
+<div #newsCard class="flex flex-col h-96 w-[90vw] md:w-full">
   <app-line-wrapper>
     <div class="flex gap-8 h-32">
       <!-- here we have the news image -->
