--- a/src/app/news/news.html
+++ b/src/app/news/news.html
@@ -8,7 +8,7 @@
   </div>
   <div  appDetectHorizontalOverflow #newsScrollSection
         (isOverFlowing) = "showScrollButtons = $event"
-        class="flex gap-8 justify-between w-[90%] mx-auto overflow-x-auto">
+        class="scroll-smooth no-scrollbar flex gap-8 justify-between w-[90%] mx-auto overflow-x-auto">
         <app-card-with-horizontal-lines #singleCard
           *ngFor="let news of newsList; let i = index"
            [newsText]=news>
