--- a/src/app/chiffres-cles/chiffres-cles.html
+++ b/src/app/chiffres-cles/chiffres-cles.html
@@ -1,6 +1,6 @@
 <div class="relative chiffresClesBack overflow-hidden h-full py-8"
-      [ngClass]="{'h-[1300vh]': showScrollButtons,
-                  'h-[106vh]': !showScrollButtons}">
+      [ngClass]="{'!h-[125vh]': showScrollButtons,
+                  '!h-[115vh]': !showScrollButtons}">
   <div class="absolute w-2/3 lg:w-2/5 h-[100%] z-10 right-0 top-1/2 -translate-y-1/2
               flex justify-end">
     <img src="/chiffres-cles/big-logo-back.svg"
