--- a/src/app/hero/hero-card/hero-card.html
+++ b/src/app/hero/hero-card/hero-card.html
@@ -14,10 +14,11 @@ py-5 w-3/5 md:w-2/5 h-[350px] bg-[#026ba5]/90 p-6 rounded-2xl shadow-lg
     <h1 class="text-3xl font-bold md:ml-5 mb-4 text-white">
       Progrès innovant
     </h1>
-    <p class="mb-4 xs:mb-8 sm:mb-12 md:!mb-20 md:ml-5 whitespace-normal text-white">
+    <p class="mb-9 sm:!mb-12 md:!mb-20 md:!ml-5 whitespace-normal text-white">
       Wind Consulting vous accompagne pour innover et progresser durablement grâce à des solutions digitales sur mesure
       alliant performance et agilité.
     </p>
+    <!--button -->
     <div class="md:ml-5 flex justify-center md:justify-start md:text-left">
       <app-button-with-background
         backgroundImageUrl="background-images/generic-background/background1-with-more-fill.svg" label="Nous Rejoindre"
