add orbiting icons

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,15 +24,14 @@
 
 <!-- technologies used + recruitment + news -->
 <section class="navbar-background overflow-hidden">
-  <app-technology-used></app-technology-used>
-
+  <app-orbit-technology></app-orbit-technology>
   <app-recruitment></app-recruitment>
   <app-news></app-news>
 </section>
+
 
 <section class="bg-newsletter-back h-full">
   <app-newsletter></app-newsletter>
   <app-footer></app-footer>
 </section>
-
 
