--- a/src/app/cards/project-card/project-card.html
+++ b/src/app/cards/project-card/project-card.html
@@ -19,9 +19,9 @@
         <div class="hidden md:block h-full w-5/12 flex-shrink-0 relative">
             <!-- image -->
             <img [src]="project.backgroundImageUrl"
-                class="w-full h-full custom-curve object-cover z-10 rounded-xl">
+                class="w-full h-full custom-curve object-cover z-10 rounded-3xl">
             <!-- shadow -->
-            <div class="absolute -z-10 bg-slate-400/70 w-full h-full left-2 top-0 custom-curve"></div>
+            <div class="absolute rounded-2xl -z-10 bg-slate-400/70 w-full h-full left-2 top-0 custom-curve"></div>
         </div>
 
         <!-- content: tags + title + description -->
