--- a/src/app/orbit-technology/orbit-technology.html
+++ b/src/app/orbit-technology/orbit-technology.html
@@ -3995,50 +3995,35 @@
           />
         </ng-container>
       </svg>-->
-      <svg
+      <svg stroke="red"
         width="100%"
         height="100%"
         viewBox="0 0 785 780"
         xmlns="http://www.w3.org/2000/svg"
       >
         <!-- we decided to just draw the circles directly in the SVG because we tried generating them dynamically by having a createPath function, this worked the other way didn't -->
-        <!-- Circle radius 180 -->
+        <!-- Circle radius 200 -->
         <path
           id="orbitPath0"
-          d="
-      M 392.5,212.5
-      a 180,180 0 1,0 0,360
-      a 180,180 0 1,0 0,-360
-      z
-    "
+          [attr.d] = "circlePath(cx, cy, 250)"
           fill="none"
-          stroke="red"
+
         />
 
         <!-- Circle radius 270 -->
         <path
           id="orbitPath1"
-          d="
-      M 392.5,122.5
-      a 270,270 0 1,0 0,540
-      a 270,270 0 1,0 0,-540
-      z
-    "
+          [attr.d] = "circlePath(cx, cy, 310)"
           fill="none"
-          stroke="red"
+
         />
 
         <!-- Circle radius 350 -->
         <path
           id="orbitPath2"
-          d="
-      M 392.5,42.5
-      a 350,350 0 1,0 0,700
-      a 350,350 0 1,0 0,-700
-      z
-    "
+          [attr.d] = "circlePath(cx, cy, 370)"
           fill="none"
-          stroke="red"
+
         />
       </svg>
 
