--- a/src/app/orbit-technology/orbit-technology.css
+++ b/src/app/orbit-technology/orbit-technology.css
@@ -1,7 +1,22 @@
 .orbit-container {
-  width: 500px;
-  height: 500px;
+  width: 450px;
+  height: 450px;
 }
+
+@media (min-width: 768px) {
+  .orbit-container {
+    width: 600px;
+    height: 600px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .orbit-container {
+    width: 650px;
+    height: 650px;
+  }
+}
+
 svg {
   width: 100%;
   height: 100%;
@@ -20,5 +35,4 @@ svg {
   position: absolute;
   width: 40px;
   height: 40px;
-  margin-left: -20px; /* negative half width */
 }
